# codex

./: AGENTS.md  README.md
codex-rs/: Cargo.toml
codex-rs/app-server/: README.md
codex-rs/app-server-protocol/src/: export.rs
codex-rs/app-server/src/: bespoke_event_handling.rs  codex_message_processor.rs  outgoing_message.rs
codex-rs/code-mode/: Cargo.toml
codex-rs/code-mode/src/: description.rs  lib.rs  runtime_stub.rs  service_stub.rs
codex-rs/codex-api/tests/: realtime_websocket_e2e.rs
codex-rs/core/src/: exec.rs  realtime_conversation.rs  realtime_conversation_tests.rs  shell_snapshot.rs
codex-rs/mobile-core/: Cargo.toml
codex-rs/mobile-core/src/: auth.rs  device_key.rs  ffi.rs  lib.rs  output.rs  patch.rs  providers.rs  responses.rs  tools.rs
codex-rs/mobile-core/src/shell/: commands.rs  mod.rs  parser.rs  workspace.rs
codex-rs/models-manager/src/: manager.rs  manager_tests.rs
codex-rs/protocol/src/: protocol.rs
codex-rs/tui/src/: app_server_session.rs  chatwidget.rs  history_cell.rs  resume_picker.rs
codex-swift/: .gitignore  Package.resolved  Package.swift  README.md
codex-swift/Artifacts/: README.md
codex-swift/Examples/CodexMobileDemo/: README.md  project.yml
codex-swift/Sources/CodexKit/: CodexAPIKeyStore.swift  CodexAuthStore.swift  CodexAuthorization.swift  CodexBrowserAuthAttempt.swift  CodexBrowserAuthenticator.swift  CodexBrowserPresentationProvider.swift  CodexBrowserTokenResponse.swift  CodexDeviceCodeAuthenticator.swift  CodexDeviceKey.swift  CodexGoalTool.swift  (+33 more)
codex-swift/scripts/: build-mobile-xcframework.sh
(+89 files in other folders)
