[package]
edition.workspace = true
license.workspace = true
name = "codex-mobile-core"
version.workspace = true

[lib]
crate-type = ["rlib", "staticlib", "cdylib"]
doctest = false
name = "codex_mobile_core"
path = "src/lib.rs"

[lints]
workspace = true

[dependencies]
base64 = { workspace = true }
codex-apply-patch = { workspace = true }
codex-device-key = { workspace = true }
codex-exec-server = { workspace = true }
codex-utils-absolute-path = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["rt"] }

[dev-dependencies]
pretty_assertions = { workspace = true }
tempfile = { workspace = true }
